--- a/tweets_harvester/templates/tweets.html
+++ b/tweets_harvester/templates/tweets.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Tweet Harvester</title>
+    <title>Tweet Keyword Extractor</title>
 
     <!-- Bootstrap 4 Stuff https://v4-alpha.getbootstrap.com/  -->
     <link rel="stylesheet"
